--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,9 @@ dependencies {
     implementation libs.room.runtime
     annotationProcessor libs.room.compiler
 
+    implementation libs.mpandroidchart
+
+    implementation libs.ssp.android
+    implementation libs.sdp.android
+
 }
